# raizr

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: test.py
backend/raizr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: robots.txt
frontend/src/: main.tsx
frontend/src/Components/: App.tsx  Input.tsx  Word.tsx
frontend/src/Components/MapComponent/: FitBounds.tsx  Map.tsx  MapThemes.tsx
frontend/src/styles/: App.css  Input.css  Map.css  index.css
notebooks/: analysis.ipynb
typings/wiktionaryparser/IPython/core/: __init__.pyi
typings/wiktionaryparser/IPython/lib/: __init__.pyi
typings/wiktionaryparser/IPython/terminal/: __init__.pyi
typings/wiktionaryparser/asttokens/: __init__.pyi
typings/wiktionaryparser/bs4/builder/: __init__.pyi
typings/wiktionaryparser/comm/: __init__.pyi
typings/wiktionaryparser/dateutil/: __init__.pyi
typings/wiktionaryparser/dateutil/parser/: __init__.pyi
typings/wiktionaryparser/dateutil/tz/: __init__.pyi
typings/wiktionaryparser/ipykernel/: __init__.pyi
typings/wiktionaryparser/jupyter_client/: __init__.pyi
typings/wiktionaryparser/jupyter_core/: __init__.pyi
typings/wiktionaryparser/pkg_resources/: __init__.pyi
typings/wiktionaryparser/soupsieve/: __init__.pyi
typings/wiktionaryparser/tornado/: __init__.pyi
typings/wiktionaryparser/urllib3/: __init__.pyi
typings/wiktionaryparser/utils/: __init__.pyi
typings/wiktionaryparser/zmq/: __init__.pyi
(+25 files in other folders)
