[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "raizr"
version = "0.1.0"
description = "A data science project exploring words and their journeys through space and time."
authors = [{ name="Melissa Cessna", email="melissacessna@yahoo.com" }]
dependencies = []
